XCOMMONS-878: Move to Java 8 as minimum version * Remove pergmen